@@ -1,4 +1,4 @@
-GTKDOC_CFLAGS = -I$(top_srcdir) $(DEP_CFLAGS)
+GTKDOC_CFLAGS = -I$(top_srcdir) $(DEP_CFLAGS) $(GNOMEPRINT_CFLAGS)
 GTKDOC_LIBS = $(top_builddir)/gtksourceview/libgtksourceview-1.0.la
 
 ## Process this file with automake to produce Makefile.in
